@@ -2,6 +2,8 @@
 * core: #2403 fixed: start conference with preferred contacts of each buddy instead of first ones (ultr)
 * core: #2434 done: account password is forgotten after offline status is set (Juzef)
 * core: #2549 fixed: clear selection on plugins list when scrolling with mouse wheel (Juzef)
+* chat styles: #1866 fixed: use small version of avatars in chat window (Vogel)
+* emoticons: #2475 fixed: accept non-latin characters in emoticons (Vogel)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
